# obsidian

./: .gitignore  .public-scan-local.example.txt  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  agent_tool_contracts.md  project_status.md  project_status.zh-CN.md  quickstart.md  schema_minimal.md  tool_matrix.md
examples/project-memory/: decision_log.json  open_question.json  rejected_idea.json  research_project.json
examples/smoke-run/: metrics.json
researchkb/: rk-health.cmd  rk_health.py  rk_mcp_server.py  rk_query.py
researchkb/contracts/: experiment_metrics_contract.md  kv_cache_reuse_metrics_contract.md
schemas/: chunk.schema.json  claim.schema.json  decision_log.schema.json  evidence_link.schema.json  experiment_metrics.schema.json  open_question.schema.json  paper.schema.json  problem_case.schema.json  rejected_idea.schema.json  research_project.schema.json
scripts/: auto_standardize_runs.py  check_citations.py  cursor_mcp_smoke.py  eval_retrieval.py  init_researchkb_workspace.py  public_repo_scan.py  query_demo.py  seed_demo_db.py  session_brief.py  standardize_run.py  validate_examples.py
src/researchkb_agent_memory.egg-info/: PKG-INFO  (+4 more)
tests/: test_auto_standardize_runs.py  test_cli.py  test_cursor_mcp_smoke.py  test_init_researchkb_workspace.py  test_public_repo_scan.py  test_quickstart_demo.py  test_rk_health.py  test_rk_mcp_server.py  test_rk_query.py  test_schema_check.py  test_session_brief.py  test_standardize_run.py  test_v040_release_demo.py
(+13 files in other folders)
