[project]
name = "researchkb-agent-memory"
version = "0.1.0"
description = "Local-first ResearchKB agent memory workflow templates and diagnostics."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
